[#98153460] Fix delete button positioning on mobile

--- a/app/stylesheets/_compare.scss
+++ b/app/stylesheets/_compare.scss
@@ -149,6 +149,11 @@
 
             .existing-drug {
               margin: 0;
+
+              .delete {
+                width: 2 * $search-button-width;
+                padding-right: 7px;
+              }
             }
           }
         }
